hphp/hack/test/fanout/modules/module-make-internal.php.incr_no_old_decls.exp
=== base errors ===
No errors!
=== changed errors ===
foo-use.php:3:23,26: Cannot access an internal element from module `A` outside of a module (Typing[4444])
  foo-defn.php:5:7,10: This is from module `A`
foo-use.php:4:14,17: Cannot access an internal element from module `A` outside of a module (Typing[4444])
  foo-defn.php:5:7,10: This is from module `A`
foo-use.php:8:14,17: Cannot access an internal element from module `A` outside of a module (Typing[4444])
  foo-defn.php:5:7,10: This is from module `A`
=== fanout ===
Fun make_fooa
Fun make_secret_fooa
Type FooA
